--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
               <div id="welcome-section" class="jumbotron jumbotron-fluid"> 
                 
-                <img class="img-fluid rounded-circle mx-auto d-block" src="img/profile-140x140.png"  alt="profile">
+                <img class="img-fluid rounded-circle mx-auto d-block margin-top" src="img/profile-140x140.png"  alt="profile">
                 <h1 class="display-4 text-center">Sitt Phone Naing</h1>
                 <p class="lead text-center">A web developer who passion about building web apps,writing clean and efficient code .</p>
                 <div class="text-center">
@@ -158,7 +158,7 @@
 					</div>
 				</div><hr>
 				<!--contact-->
-				<form >
+				<form netlify >
 					<div id="contact" class="row">
 						<div class="col-sm-4"></div>
 						<div class=" col-sm-4">
@@ -183,10 +183,10 @@
 								<button type="submit" class="btn navbar-custom ">Send</button>
 							</div>
 						</div>
-						<div class="col-sm-4"></div>
-				</div>
+						<div class="col-sm-3"></div>
+					</div>
 				</form><br>
-			</div>
+			</div><!--end of container-->
 
               
 
