fix github icon

--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
 							<div class="text-center" >
 								<a class="mr-3 pt-2" href="https://www.linkedin.com/in/sitt-phone-naing-a24998123/" target="_blank" data-toggle="tooltip" data-placement="top" title="Linkedin"><i class="fab fa-linkedin-in" style="font-size: 2rem; color: white" ></i></a>
 								<a class="mr-3 pt-2" href="mailto:sittphonenaing@gmail.com" target="_blank" data-toggle="tooltip" data-placement="top" title="Gmail"><i class="icon-google" style="font-size: 2rem; color:white" ></i></a>
-								<a class="mr-3 pt-2" href="https://github.com/sittphonenaing" target="_blank" data-toggle="tooltip" data-placement="top" title="Github"><i class="icon-git" style="font-size: 2rem;color: white" ></i></a>
+								<a class="mr-3 pt-2" href="https://github.com/sittphonenaing" target="_blank" data-toggle="tooltip" data-placement="top" title="Github"><i class="fab fa-github" style="font-size: 2rem;color: white" ></i></a>
 								<a class="mr-3 pt-2" href="https://codepen.io/sittphone-naing" target="_blank" data-toggle="tooltip" data-placement="top" title="CodePen"><i class="icon-codepen" style="font-size: 2rem;color: white" ></i></a>  
 							</div>	
 						</div>
